# intranet-sdk

./: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum  intranet.go  release.sh
client/: http_client.go
cmd/artifact-download-verify/: main.go
docs/: apikey-usage.md  architecture.md  artifact_usage.md  claw-skill-usage.md  usage_guide.md
examples/: apikey_example.go  artifact_example.go  claw_skill_example.go  connector_example.go  user_example.go
models/: apikey.go  artifact.go  claw_skill.go  common.go  multi_repo_merge_set.go  user.go
python/: .env.example  README.md  README_TEST.md  publish.sh  pyproject.toml  test_sdk.py
python/examples/: __init__.py  connector_example.py  user_example.py
python/src/intranet_sdk/: __init__.py  intranet.py
python/src/intranet_sdk/client/: __init__.py  config.py  http_client.py
python/src/intranet_sdk/models/: __init__.py  common.py  user.py
python/src/intranet_sdk/services/: __init__.py  connector_service.py  user_service.py
python/src/intranet_sdk/utils/: __init__.py  errors.py  logger.py  sts.py
services/: apikey_service.go  artifact_service.go  artifact_service_test.go  claw_skill_service.go  claw_skill_service_integration_test.go  claw_skill_service_test.go  connector_service.go  multi_repo_merge_set_service.go  user_service.go
tests/: apikey_integration_test.go  artifact_integration_test.go  helper.go
utils/: errors.go  logger.go  sts.go  sts_test.go
